--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:create": "yarn build && yarn typeorm migration:create",
+    "migration:generate": "yarn build && yarn typeorm migration:generate -d dist/src/common/db/typeORM.config.js",
+    "migration:run": "yarn build && yarn typeorm migration:run -d dist/src/common/db/typeORM.config.js",
+    "migration:revert": "yarn build && yarn typeorm migration:revert -d dist/src/common/db/typeORM.config.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -50,7 +55,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
